--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Password Generator</h1>
+    <p name="Password" id="SuperSecretPWD"></p>
 
     <script type="text/javascript" src="main.js"></script>
   </body>
