--- a/index.html
+++ b/index.html
@@ -3,12 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PWD Gen</title>
+    <title>Password Generator</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <h1>Password Generator</h1>
-    <p name="Password" id="SuperSecretPWD"></p>
-
-    <script type="text/javascript" src="main.js"></script>
+  <body class="bg-dark">
+    <div class="container text-center p-5 my-text-color">
+      <header class="mb-5">
+        <h1 class="fw-bold">Password Generator</h1>
+        <h2 class="fw-bold fst-italic">(a very serius one)</h2>
+      </header>
+      <div class="row justify-content-around gy-3 fs-5">
+        <div class="col-12 col-md-6 py-3">
+          <div>Your Super Secret Password:</div>
+          <div class="d-none d-lg-block fs-6">
+            (hoover your mouse over the box to show)
+          </div>
+          <div class="d-lg-none fs-6">(tap the box to show)</div>
+        </div>
+        <div class="col-12 col-md-6 py-3">
+          <div id="SuperSecretPWD">pass</div>
+        </div>
+      </div>
+    </div>
+    <!-- <script type="text/javascript" src="main.js"></script> -->
   </body>
 </html>
