--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="bg-dark">
-    <div class="container text-center p-5 my-text-color">
+    <!-- *****MAIN CONTAINER***** -->
+    <div class="container text-center px-3 py-5 my-text-color">
+      <!-- ****HEADER**** -->
       <header class="mb-5">
         <h1 class="fw-bold">Password Generator</h1>
-        <h2 class="fw-bold fst-italic">(a very serius one)</h2>
+        <h2 class="fw-bold fst-italic">(a very, very serius one)</h2>
       </header>
-      <div class="row justify-content-around gy-3 fs-5">
+      <!-- ****/HEADER**** -->
+      <!-- ****ROW**** -->
+      <div class="row justify-content-around gy-3 fs-5 align-items-center">
+        <!-- ***LEFT COLUMN*** -->
         <div class="col-12 col-md-6 py-3">
           <div>Your Super Secret Password:</div>
           <div class="d-none d-lg-block fs-6">
@@ -26,11 +31,14 @@
           </div>
           <div class="d-lg-none fs-6">(tap the box to show)</div>
         </div>
+        <!-- ***/LEFT COLUMN*** -->
+        <!-- ***RIGHT COLUMN*** -->
         <div class="col-12 col-md-6 py-3">
-          <div id="SuperSecretPWD">pass</div>
+          <div id="SuperSecretPWD"></div>
         </div>
-      </div>
+        <!-- ***RIGHT COLUMN*** -->
     </div>
-    <!-- <script type="text/javascript" src="main.js"></script> -->
+    <!-- *****MAIN CONTAINER***** -->
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
