--- a/index.html
+++ b/index.html
@@ -1,44 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+    <!-- *****BOOSTRAP STYLE***** -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+        <!-- *****MY STYLE***** -->
     <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body class="bg-dark">
+    <!-- *****GOOGLE FONTS***** -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
+</head>
+
+<body class="bg-dark">
     <!-- *****MAIN CONTAINER***** -->
-    <div class="container text-center px-3 py-5 my-text-color">
-      <!-- ****HEADER**** -->
-      <header class="mb-5">
-        <h1 class="fw-bold">Password Generator</h1>
-        <h2 class="fw-bold fst-italic">(a very, very serius one)</h2>
-      </header>
-      <!-- ****/HEADER**** -->
-      <!-- ****ROW**** -->
-      <div class="row justify-content-around gy-3 fs-5 align-items-center">
-        <!-- ***LEFT COLUMN*** -->
-        <div class="col-12 col-md-6 py-3">
-          <div>Your Super Secret Password:</div>
-          <div class="d-none d-lg-block fs-6">
-            (hoover your mouse over the box to show)
-          </div>
-          <div class="d-lg-none fs-6">(tap the box to show)</div>
+    <div class="container text-center px-3 py-5 my-text-color ">
+        <!-- ****HEADER**** -->
+        <header class="mb-3">
+           <a href="index.html" class="text-decoration-none my-text-color"> <div class="container d-flex align-items-center d-flex justify-content-center mb-2">
+                <img src="img/logo.jpeg" class="me-3" alt="">
+                <h1 class="m-0"> Secure Password Generator</h1>
+            </div>  
+        </a>
+            <h6 class="fst-italic">(a very, very secure one)</h6>
+        </header>
+        <!-- ****/HEADER**** -->
+        <!-- ****ROW**** -->
+        <div class="row justify-content-around gy-3 fs-5 align-items-center">
+            <!-- ***LEFT COLUMN*** -->
+            <div class="col-12 col-md-6 py-3">
+                <div>Your Super Secret Password:</div>
+                <div class="d-none d-lg-block fs-6">
+                    (hover your mouse over the box to show)
+                </div>
+                <div class="d-lg-none fs-6">(tap the box to show)</div>
+            </div>
+            <!-- ***/LEFT COLUMN*** -->
+            <!-- ***RIGHT COLUMN*** -->
+            <div class="col-12 col-md-6 py-3">
+                <div id="SuperSecretPWD"></div>
+            </div>
+            <!-- ***RIGHT COLUMN*** -->
         </div>
-        <!-- ***/LEFT COLUMN*** -->
-        <!-- ***RIGHT COLUMN*** -->
-        <div class="col-12 col-md-6 py-3">
-          <div id="SuperSecretPWD"></div>
-        </div>
-        <!-- ***RIGHT COLUMN*** -->
-    </div>
-    <!-- *****MAIN CONTAINER***** -->
-    <script type="text/javascript" src="main.js"></script>
-  </body>
+        <!-- *****MAIN CONTAINER***** -->
+        <script type="text/javascript" src="main.js"></script>
+</body>
+
 </html>
