--- a/index.html
+++ b/index.html
@@ -24,22 +24,23 @@
         <!-- ****HEADER**** -->
         <header class="mb-3">
            <a href="index.html" class="text-decoration-none my-text-color"> <div class="container d-flex align-items-center d-flex justify-content-center mb-2">
-                <img src="img/logo.jpeg" class="me-3" alt="">
+                <img src="img/LogoPNG.png" class="me-2" alt="">
                 <h1 class="m-0"> Secure Password Generator</h1>
             </div>  
         </a>
             <h6 class="fst-italic">(a very, very secure one)</h6>
         </header>
         <!-- ****/HEADER**** -->
+        <!-- ****MAIN CONTENT**** -->
         <!-- ****ROW**** -->
         <div class="row justify-content-around gy-3 fs-5 align-items-center">
             <!-- ***LEFT COLUMN*** -->
             <div class="col-12 col-md-6 py-3">
                 <div>Your Super Secret Password:</div>
-                <div class="d-none d-lg-block fs-6">
+                <div class="d-none d-md-block fs-6">
                     (hover your mouse over the box to show)
                 </div>
-                <div class="d-lg-none fs-6">(tap the box to show)</div>
+                <div class="d-md-none fs-6">(tap the box to show)</div>
             </div>
             <!-- ***/LEFT COLUMN*** -->
             <!-- ***RIGHT COLUMN*** -->
@@ -48,6 +49,7 @@
             </div>
             <!-- ***RIGHT COLUMN*** -->
         </div>
+                <!-- ****MAIN CONTENT**** -->
         <!-- *****MAIN CONTAINER***** -->
         <script type="text/javascript" src="main.js"></script>
 </body>
