--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <!-- ***LEFT COLUMN*** -->
             <div class="col-12 col-md-6 py-3">
                 <div>Your Super Secret Password:</div>
-                <div class="d-none d-md-block fs-6">
+                <div class="d-none d-ld-block fs-6">
                     (hover your mouse over the box to show)
                 </div>
-                <div class="d-md-none fs-6">(tap the box to show)</div>
+                <div class="d-ld-none fs-6">(tap the box to show)</div>
             </div>
             <!-- ***/LEFT COLUMN*** -->
             <!-- ***RIGHT COLUMN*** -->
