--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <!-- *****BOOSTRAP STYLE***** -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-        <!-- *****MY STYLE***** -->
+    <!-- *****MY STYLE***** -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- *****GOOGLE FONTS***** -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-    rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body class="bg-dark">
@@ -23,15 +23,15 @@
     <div class="container text-center px-3 py-5 my-text-color ">
         <!-- ****HEADER**** -->
         <header class="mb-3">
-           <a href="index.html" class="text-decoration-none my-text-color"> <div class="container d-flex align-items-center d-flex justify-content-center mb-2">
-                <img src="img/LogoPNG.png" class="me-2" alt="">
-                <h1 class="m-0"> Secure Password Generator</h1>
-            </div>  
-        </a>
+            <a href="index.html" class="text-decoration-none my-text-color">
+                <div class="container d-flex align-items-center d-flex justify-content-center mb-2">
+                    <img src="img/LogoPNG.png" class="me-2" alt="">
+                    <h1 class="m-0"> Secure Password Generator</h1>
+                </div>
+            </a>
             <h6 class="fst-italic">(a very, very secure one)</h6>
         </header>
         <!-- ****/HEADER**** -->
-        <!-- ****MAIN CONTENT**** -->
         <!-- ****ROW**** -->
         <div class="row justify-content-around gy-3 fs-5 align-items-center">
             <!-- ***LEFT COLUMN*** -->
@@ -49,9 +49,10 @@
             </div>
             <!-- ***RIGHT COLUMN*** -->
         </div>
-                <!-- ****MAIN CONTENT**** -->
-        <!-- *****MAIN CONTAINER***** -->
-        <script type="text/javascript" src="main.js"></script>
+        <!-- ****/ROW**** -->
+    </div>
+    <!-- *****MAIN CONTAINER***** -->
+    <script src="main.js"></script>
 </body>
 
 </html>
