fis: moved main.js into folder. updated console log

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- ****/ROW**** -->
     </div>
     <!-- *****MAIN CONTAINER***** -->
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
